Refactor Dockerfile for multi-stage build and update package.json scripts. Added production stage to Dockerfile for optimized image and changed npm install to include all dependencies during build. Removed postinstall script from package.json.

--- a/package.json
+++ b/package.json
@@ -6,8 +6,7 @@
   "scripts": {
     "start": "node dist/index.js",
     "dev": "ts-node-dev --respawn --transpile-only index.ts",
-    "build": "tsc",
-    "postinstall": "npm run build"
+    "build": "tsc"
   },
   "keywords": ["socket.io", "chat", "pet-sitter"],
   "author": "",
