Enhance project configuration for Railway deployment by adding .railwayignore, updating .dockerignore, and refining .gitignore. Introduce CHANGES_SUMMARY.md for deployment documentation, and include new deployment and setup guides in DEPLOYMENT.md and SETUP_CLIENT.md. Update package.json to integrate Prisma and adjust build scripts accordingly.

--- a/.dockerignore
+++ b/.dockerignore
@@ -1,2 +1,19 @@
-# Ignore everything to prevent Docker build
-*
+# Ignore Docker files to prevent Docker build
+Dockerfile
+docker-compose.yml
+.dockerignore
+
+# Ignore development files
+node_modules
+.env
+.env.local
+.env.development.local
+.env.test.local
+.env.production.local
+
+# Ignore build artifacts
+dist
+*.log
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
