--- a/package.json
+++ b/package.json
@@ -6,23 +6,25 @@
   "scripts": {
     "start": "node dist/index.js",
     "dev": "ts-node-dev --respawn --transpile-only index.ts",
-    "build": "tsc",
-    "postinstall": "npm run build"
+    "build": "prisma generate && tsc",
+    "postinstall": "npm run build",
+    "prisma:generate": "prisma generate"
   },
   "keywords": ["socket.io", "chat", "pet-sitter"],
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@prisma/client": "^5.14.0",
     "express": "^4.19.2",
     "socket.io": "^4.8.1",
     "dotenv": "^16.4.5",
-    "cors": "^2.8.5",
-    "@prisma/client": "^6.16.3"
+    "cors": "^2.8.5"
   },
   "devDependencies": {
     "@types/express": "^4.17.21",
     "@types/node": "^20.14.10",
     "@types/cors": "^2.8.17",
+    "prisma": "^5.14.0",
     "ts-node-dev": "^2.0.0",
     "typescript": "^5.5.3"
   }
