Update environment configuration and Prisma schema: add production CORS origin, modify DATABASE_URL for Railway, and introduce new models for pet types, sitters, roles, and reviews while removing obsolete models.

--- a/env.example
+++ b/env.example
@@ -5,9 +5,9 @@ PORT=4000
 
 # CORS origins (comma-separated)
 # For development: http://localhost:3000
-# For production: Add your production URL (e.g., https://your-app.vercel.app)
-SOCKET_IO_CORS_ORIGIN=http://localhost:3000
+# For production: https://vercel.com/phumphuts-projects/pet-sitter-app
+SOCKET_IO_CORS_ORIGIN=http://localhost:3000,https://vercel.com/phumphuts-projects/pet-sitter-app
 
 # Database connection string (Required for Prisma)
-# Format: postgresql://USER:PASSWORD@HOST:PORT/DATABASE?schema=public
-DATABASE_URL="postgresql://user:password@localhost:5432/pet_sitter_db?schema=public"
+# Copy this to Railway environment variables
+DATABASE_URL="postgresql://neondb_owner:npg_FK8d2ZDRyTVI@ep-rough-wind-a1a1nhwe-pooler.ap-southeast-1.aws.neon.tech/neondb?sslmode=require&channel_binding=require"
